# freETarget

./: .gitignore  MIT License.txt  README.md  compute_hit.h  compute_hit.ino  freETarget.ino  gpio.h  gpio.ino  mechanical.h
Arduino/: Electronic_Target.ino  Read_Clock.ino  compute_hit.ino
Arduino/freETarget/: analog_io.h  analog_io.ino  compute_hit.h  compute_hit.ino  diag_tools.ino  freETarget.h  freETarget.ino  gpio.h  gpio.ino  mechanical.h
Arduino/freETarget copy/: analog_io.ino  compute_hit.ino  freETarget.h  mechanical.h
Circuit/: Electronic Target-B_Cu.gbr  Electronic Target-B_Mask.gbr  Electronic Target-B_Paste.gbr  Electronic Target-B_SilkS.gbr  Electronic Target-Edge_Cuts.gbr  Electronic Target-F_Cu.gbr  Electronic Target-F_Mask.gbr  Electronic Target-F_Paste.gbr  Electronic Target-F_SilkS.gbr  Electronic Target-NPTH-drl_map.ps  Electronic Target-NPTH.drl  Electronic Target-PTH-drl_map.ps  Electronic Target-PTH.drl  Electronic Target-cache.lib  Electronic Target.kicad_pcb  Electronic Target.kicad_pcb-bak  Electronic Target.net  Electronic Target.pro  Electronic Target.sch  Electronic Target.sch-bak  fp-info-cache
Documentation/: Application Note- Browser Operation.docx  Application Note- Large Scale WiFi.docx  Application Note- RS485.docx  Application Note- Resetting a Target Board.docx  Assembling Kit Instructions.docx  Building a Five Bay Rapid Fire Target.docx  Building freETarget.docx  Clock Test Samples.xlsx  Commissioning.docx  Downloading Firmware.docx  Fasteners.docx  Flyer.docx  GRID.xlsx  Going Wireless.docx  Greetings.docx  Multi Function Switches.docx  Optional Interfaces.docx  Over The Air Updates.docx  Packing Slip.docx  Power Point.pptx  Rapid Fire Traffic Lights.docx  Resettting the FreeETarget Circuit.docx  Sample Calculations.xlsx  Sensor Characterization.docx  Sensor Geometry.sketch  Service Manual.docx  Source Control Document- Ribbon Cable.docx  Sticker.docx  Suis Target Plate Installation.docx  Switch.sketch  Tabata Training.docx  Test Target.sketch  Theory of Operation.docx  Training with FreeETarget.docx  Using Witness Paper.docx  Using the Accessory Connector.docx  Welcome_to_FreeETarget.docx  freETarget Basic Layout.sketch  freETarget Interface Control Document.docx  freETarget Layout.sketch
Documentation/Application Notes/: Application Note - Advanced Operation.docx  Application Note - Downloading Firmware.docx  Application Note - Installing the Target Light.docx  Application Note - Multilane Targets.docx  Application Note - Rapid Fire Traffic Lights.docx  Application Note - temp Advanced Operation.docx  Application Note- Board Revision.docx  Application Note- Precision Calibration.docx  Application Note- RS485.docx
Documentation/Archive/: Commissioning.docx  Fifty Meter Test Proceedure.docx  Multi Function Switches.docx  Tabata and Rapid Fire Training.docx
Documentation/Construction:Assembly/: Fasteners.docx  Packing Slip.docx
Documentation/Construction_and_Assembly/: Kit Packing Slip.docx  Suis Target Plate Installation.docx
Documentation/Illustrations/: AUX Connector.sketch  Icon.sketch  Logo.sketch  Multi Function Connector.sketch  Ribbon Cable.sketch  Shelves.sketch  Target Installation.sketch  Target Range Simple.sketch  Target Range.sketch
Documentation/Pictures/: 50 Meter Pistol Target.docx  DC Motor Connection.sketch  GRID_PATTERN.psd  Multi Function Connector.sketch  Sensor Geometry.sketch  Targete Schematic  Z_OFFSET.sketch  competition
Documentation/Technical/: SmartPhone-Tablet.docx  (+1 more)
KiCad/: Before copper pour.kicad_pcb  Electronic Target  Electronic Target-B_Cu.gbr  Electronic Target-B_Mask.gbr  Electronic Target-B_SilkS.gbr  Electronic Target-Edge_Cuts.gbr  Electronic Target-F_Cu.gbr  Electronic Target-F_Mask.gbr  Electronic Target-F_SilkS.gbr  Electronic Target-NPTH-drl_map.ps  Electronic Target-NPTH.drl  Electronic Target-PTH-drl_map.ps  Electronic Target-PTH.drl  Electronic Target-cache.lib  Electronic Target-top.pos  Electronic Target.csv  Electronic Target.d356  Electronic Target.kicad_pcb  Electronic Target.kicad_pcb-bak  Electronic Target.net  Electronic Target.pro  Electronic Target.rpt  Electronic Target.sch  Electronic Target.sch-bak  Electronic Target.xml  FREEETARGET.kicad_sym  fp-info-cache  sym-lib-table
Mechanical/: RapidFireSupport.stl
Software/ESP32/main/: CMakeLists.txt  WiFi.c  WiFi.h  analog_io.c  analog_io.h  calibrate.c  calibrate.h  compute_hit.c  compute_hit.h  dac.c  dac.h  diag_tools.c  diag_tools.h  freETarget.c  freETarget.h  gpio.c  gpio.h  gpio_define.c  gpio_define.h  helpers.c  helpers.h  http_client.c  http_client.h  http_test.c  http_test.h  i2c.c  i2c.h  idf_component.yml  json.c  json.h  main.c  mechanical.h  mfs.c  mfs.h  nonvol.c  nonvol.h  pcnt.c  pcnt.h  pwm.c  pwm.h  (+8 more)
Software/ESP32/main/BlueTooth/: BlueTooth.c  BlueTooth.h  BlueTooth_spp.c  BlueTooth_spp.h  BlueTooth_spp_init.c
Software/ESP32/main/HTML/: CMakeLists.txt  FreeETarget.html  FreeETarget.htmlX  ISSF_P10  Pistol_10.html  Pistol_10.html.c  Rifle.html  TargetShot2.c  control_panel.html  coordinates.txt  gwd_workspace.json  help.html  html.h  index.html  index_event.html  index_html.c  issf.png.c  menu.html  post_test.html  post_test.html.c  post_test_2.html  post_test_2.html.c
Software/ESP32/main/HTML/HELP.fld/: filelist.xml
Software/ESP32/main/HTML/gwd_preview_menu/: index.html  preview.html  preview_polymer.js
Software/ESP32/main/HTML/gwd_preview_menu/webcomponentsjs/: web-animations-next-lite.min.js
Software/ESP32/main/TCPIP/: CMakeLists.txt  OTA.c  OTA.h  WiFi.c  http_client.c  http_server.c  http_server.h  http_services.c  http_services.h  http_test.c
Software/ESP32/main/drivers/: CMakeLists.txt  WiFi.c  WiFi.h  analog_io.c  analog_io.h  bluetooth.c  bluetooth.h  board_assembly.h  dac.c  dac.h  gpio.c  gpio.h  gpio_define.c  gpio_define.h  pcnt.c  pwm.c  serial_io.c  serial_io.h  sockets.c  token.c  token.h
Software/ESP32/main/web/: WiFi.c  http_client.c  http_client.h  http_server.c  http_server.h  http_services.c  http_services.h  http_test.c  http_test.h  post_test.html.c
(+825 files in other folders)
