idf_component_register(SRCS  "main.c" 
                    "freetarget.c"
                    "drivers/dac.c" 
                    "drivers/pcnt.c"
                    "diag_tools.c"
                    "nonvol.c"
                    "json.c"
                    "drivers/analog_io.c"
                    "drivers/gpio.c"
                    "drivers/gpio_define.c"
                    "drivers/i2c.c"
                    "drivers/pwm.c"
                    "drivers/pcnt.c"
                    "drivers/serial_io.c"
                    "drivers/token.c"
                    "mfs.c"
                    "compute_hit.c"
                    "speed_of_sound.c"
                    "timer.c"
                    "web/wifi.c"
                    "web/http_client.c"
                    "web/http_test.c"
                    "web/http_server.c"
                    "html/targetshot2.c"
                    INCLUDE_DIRS "." 
                    "./web" 
                    "./drivers"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/hal/include/hal"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/esp_adc/include/esp_adc"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/esp_http_server/include"
                    )
