idf_component_register(
    SRCS  
    "main.c" 
    "freetarget.c"
    "helpers.c"
    "drivers/dac.c" 
    "drivers/pcnt.c"
    "diag_tools.c"
    "nonvol.c"
    "json.c"
    "drivers/analog_io.c"
    "drivers/gpio.c"
    "drivers/gpio_define.c"
    "drivers/i2c.c"
    "drivers/pwm.c"
    "drivers/pcnt.c"
    "drivers/serial_io.c"
    "drivers/token.c"
    "mfs.c"
    "compute_hit.c"
    "speed_of_sound.c"
    "timer.c"
    "TCPIP/wifi.c"
    "TCPIP/http_client.c"
    "TCPIP/http_test.c"
    "TCPIP/http_server.c"
    "TCPIP/http_services.c"
    "BlueTooth/BlueTooth_spp_init.c"
    "BlueTooth/BlueTooth_spp.c"
    "C:/Users/allan/esp/v5.3.1/esp-idf/components/bt/host/bluedroid/api/esp_spp_api.c"

    INCLUDE_DIRS
    "." 
    "./TCPIP" 
    "./BlueTooth"
    "./drivers"
    "./html"
    "./BlueTooth"
    "C:/Users/allan/esp/esp-idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos"
    "C:/Users/allan/esp/esp-idf/esp-idf/components/hal/include/hal"
    "C:/Users/allan/esp/esp-idf/esp-idf/components/esp_adc/include/esp_adc"
    "C:/Users/allan/esp/esp-idf/esp-idf/components/esp_http_server/include"
    "C:/Users/allan/esp/v5.3.1/esp-idf/components/bt/common/btc/include"
    "C:/Users/allan/esp/v5.3.1/esp-idf/components/bt/common/btc/include/btc"
    "C:/Users/allan/esp/v5.3.1/esp-idf/components/bt/host/bluedroid/btc/include/btc"
    
    EMBED_FILES 
    "html/index.html"
    "html/issf.png"
    "html/post_test.html"
    
    )
