idf_component_register(
    SRCS  



                    INCLUDE_DIRS 
                    "." 
                    "./tcpip" 
                    "./drivers"
                    "./html"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/hal/include/hal"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/esp_adc/include/esp_adc"
                    "C:/Users/allan/esp/esp-idf/esp-idf/components/esp_http_server/include"
                    
                    EMBED_FILES 
                    "index.html"
                    "issf.png"
                    "post_test.html"
                
                    )
